[package]
name = "nft_program"
version = "0.1.0"
description = "NFT Program on Solana using Anchor + Metaplex"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["metadata"] }
mpl-token-metadata = "5.1.0"