[package]
name = "sbt_program"
version = "0.1.0"
description = "Soulbound Token (SBT) — Token-2022, NonTransferable + PermanentDelegate"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sbt_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
# token-2022 enables anchor_spl::token_2022 module and re-exports spl_token_2022.
# associated-token enables anchor_spl::associated_token (ATA creation CPI).
# Metaplex is intentionally removed: SBT metadata lives entirely on-chain in
# the SbtRecord PDA. This avoids Token-2022 compatibility issues with the
# Metaplex Token Metadata program v3.
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.32.1", features = ["token_2022", "associated_token"] }